# mini-gmp

./: .gitignore  CMakeLists.txt  GMP.pro  README.md  doxygen.conf
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  GMP.pri  GMP.pro  bigint.h  ccache.pri  mini-gmp.c  mini-gmp.h  minigmp_global.h
tests/: CMakeLists.txt
